example-ingress-allowed.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-demo-allowed
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"  # Ensures HTTP is redirected to HTTPS
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"  # Forces SSL
    kubernetes.io/ingress.allow-http: "false"        # Disallows HTTP
spec:
  tls:
    - hosts:
        - example-host.example.com
      secretName: example-tls-secret  # Name of the TLS secret
  rules:
    - host: example-host.example.com
      http:
        paths:
          - backend:
              serviceName: nginx
              servicePort: 80
